Interfaces REST ready for UI integrations
